PedidoCadastroController - Ordem da lista de items alterada para que novos itens adicionados sejam inseridos na ultima posição